syntax = "proto3";
package freym.projections.delivery;
import "projections/delivery/shared.proto";

message DeleteRequest {
	string projection = 1;
	AuthData auth = 2;
	string data_id = 3;
	DataFilter filter = 4;
	EventMetadata event_metadata = 5;
}

message DeleteResponse {
	int64 number_of_deleted_entries = 1;
}


